# github-task-protocol

./: .gitignore  CONTEXT.md  DECISIONS.md  DESIGN.md  GLOSSARY.md  GTP.md  LICENSE  README.md  build_backend.py  pyproject.toml
.github/workflows/: ci.yml
acceptance/: README.md  STATUS.md  pr-snapshot-binding-run.json  public-release-v1.0.1.json  public-release-v1.0.2.json  purpose-safety-run.json  release-notes-v1.0.1.md  release-notes-v1.0.2.md  release.json  run.json  stop-time-boundary-run.json  v1.0.0.json
acceptance/explicit-setup-install/: delivery.json  run.json
acceptance/level0/: README.md  run.json
acceptance/level1/: README.md  final-live-probe-anchor.txt  human-probe.md  live-probe-anchor.txt  plain-live-probe-anchor.txt  rerun-live-probe-anchor.txt  run.json
acceptance/problem-explanations/: human-probe.md  recovery.json  run.json
acceptance/purpose-alignment/: run.json  walking-skeleton.json
acceptance/url-only-install/: pending-explicit-setup-evidence.json  pending-external-evidence.json
adr/: 0035-human-actionable-problem-explanations.md  0036-human-github-post-check.md
src/gtp/: __init__.py  carrier.py  cli.py  github.py  human_post.py  model.py  presentation.py  reducer.py  schema.py  status.py  urls.py
tests/: test_adr_coverage.py  test_build_backend.py  test_carrier.py  test_cli.py  test_github.py  test_human_post.py  test_reducer.py  test_release_surface.py  test_schema.py  test_status.py  test_v1_conformance.py
tests/fixtures/: adr-conformance.json  prune-report.txt  reducer-truth-table.json  schema-conformance.json  (+1 more)
(+25 files in other folders)
