[build-system]
requires = []
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "github-task-protocol"
version = "1.0.0"
description = "Reconstruct AI coding task state from GitHub Issue records"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
gtp = "gtp.cli:main"
